Fix to irregular columns on small screens
- **[Fix]** Added max-width stipulation to .column-narrow and .column-wide divs.

--- a/root/static/css/main-print.css
+++ b/root/static/css/main-print.css
@@ -928,9 +928,9 @@ fieldset {min-width: 100%;}
 
 /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 900px) {
-  .column {
-    width: 100%;
-  }
+  .column {width: 100%;}
+  .column-narrow {width: 100%;}
+  .column-wide {width: 100%;}
 }
 
 span.player_total {
